# SmartMedicine

SmartMedicineBoxApp/AppScope/: app.json5
SmartMedicineBoxApp/AppScope/resources/base/element/: string.json
SmartMedicineBoxApp/entry/src/main/: module.json5
SmartMedicineBoxApp/entry/src/main/ets/common/: Api.ets  Inter.ets  list.ets  utils.ets
SmartMedicineBoxApp/entry/src/main/ets/compnent/: AIPage.ets  ComlicationDetailPage.ets  ComplicationPage.ets  ControllerPage.ets  DataPage.ets  LockPage.ets  LogPage.ets  NewPage.ets  Swp1Page.ets  Swp2Page.ets  Swp3Page.ets  Swp4Page.ets  TimerPage.ets
SmartMedicineBoxApp/entry/src/main/ets/http/: HttpUtil.ets
SmartMedicineBoxApp/entry/src/main/ets/pages/: HomePage.ets  Index.ets  LoginPage.ets  RegisterPage.ets
SmartMedicineBoxApp/entry/src/main/ets/views/: CustomDialog.ets
SmartMedicineBoxApp/entry/src/main/ets/views/repeatViews/: HeaderViews.ets
SmartMedicineBoxApp/entry/src/main/resources/base/media/: layered_image.json
SmartMedicineBoxApp/entry/src/main/resources/base/profile/: main_pages.json
SmartMedicineBoxApp/entry/src/main/resources/rawfile/: echarts.html
SmartMedicineBoxApp/entry/src/main/resources/rawfile/echarts/views/: chronic.html  index.html  quota.html  trend.html
SmartMedicineBoxApp/entry/src/main/resources/zh_CN/element/: string.json
SmartMedicineBoxHardware/: BUILD.gn  main.c
SmartMedicineBoxHardware/include/: ds1302.h  fifo.h  hx711.h  lcd.h  lcd_font.h  sensor.h
SmartMedicineBoxHardware/src/: ds1302.c  fifo.c  hx711.c  lcd.c  sensor.c
